tests/bad/spawn_bad_assign.alp
component Stats:
    int age
    float height
end

component Names:
    <string> names
end

entity Person:
    Stats
end

function void main(<string> args):
    spawn Person:
        Stats:
            age: 20
            height: "this is a string"
        end
    end
end
